--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
 </head>
 
 <body>
+    
+    <header>
+        <div class="row">
+            <div class="col-4">
+                <h1>Star Wars Characters</h1>
+                <p>Incomplete list</p>
+            </div>
+        </div>
+    </header>
+
 
 </body>
 
