--- a/index.html
+++ b/index.html
@@ -31,6 +31,53 @@
         </div>
     </header>
 
+    <div class="row">
+        <div class="col-4">
+            <div class="card-container">
+                <img src="https://tf-assets-prod.s3.amazonaws.com/tf-curric/WEB-DEV-001/2.6.3_challenge_responsive_layout/rey_square.png" />
+                <h3 class="card-title">Rey</h3>
+                <p class="card-subtitle">Protagonist, from Jakku</p>
+            </div>
+        </div>
+        <div class="col-4">
+            <div class="card-container">
+                <img src="https://tf-assets-prod.s3.amazonaws.com/tf-curric/WEB-DEV-001/2.6.3_challenge_responsive_layout/finn_square.png" />
+                <h3 class="card-title">Finn</h3>
+                <p class="card-subtitle"> Stormtropper, befriends Rey</p>
+            </div>
+        </div>
+        <div class="col-4">
+            <div class="card-container">
+                <img src="https://tf-assets-prod.s3.amazonaws.com/tf-curric/WEB-DEV-001/2.6.3_challenge_responsive_layout/kylo_square.png" />
+                <h3 class="card-title">Kylo Ren</h3>
+                <p class="card-subtitle">Main villain, or is he?</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-4">
+            <div class="card-container">
+                <img src="https://tf-assets-prod.s3.amazonaws.com/tf-curric/WEB-DEV-001/2.6.3_challenge_responsive_layout/poe_square.png" />
+                <h3 class="card-title">Poe</h3>
+                <p class="card-subtitle">Pilot for the resistance</p>
+            </div>
+        </div>
+        <div class="col-4">
+            <div class="card-container">
+                <img src="https://tf-assets-prod.s3.amazonaws.com/tf-curric/WEB-DEV-001/2.6.3_challenge_responsive_layout/chewbacca_square.png" />
+                <h3 class="card-title">Chewbacca</h3>
+                <p class="card-subtitle">A great first mate</p>
+            </div>
+        </div>
+        <div class="col-4">
+            <div class="card-container">
+                <img src="https://tf-assets-prod.s3.amazonaws.com/tf-curric/WEB-DEV-001/2.6.3_challenge_responsive_layout/yoda_square.png" />
+                <h3 class="card-title">Yoda</h3>
+                <p class="card-subtitle">Wise old Jedi master</p>
+            </div>
+        </div>
+    </div>
 
 </body>
 
