Add text box class - solves problem of creating a border around entire card.

--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
         <div class="col-4">
             <div class="card-container">
                 <img src="https://tf-assets-prod.s3.amazonaws.com/tf-curric/WEB-DEV-001/2.6.3_challenge_responsive_layout/rey_square.png" />
-                <h3 class="card-title">Rey</h3>
-                <p class="card-subtitle">Protagonist, from Jakku</p>
+                <div class="card-text-box">
+                    <h3 class="card-title">Rey</h3>
+                    <p class="card-subtitle">Protagonist, from Jakku</p>
+                </div>
             </div>
         </div>
         <div class="col-4">
